// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Components Case: Case Response Line 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
/>
`;

exports[`Render Components Case: Gen Stats 1`] = `
<div
  className="new-stats"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <h2
    className="new-stats-title"
  />
  <h2
    className="new-stats-data"
  >
    %
  </h2>
</div>
`;

exports[`Render Components Case: New Stats 1`] = `
<div
  className="new-stats"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <h2
    className="new-stats-title"
  />
  <h2
    className="new-stats-data"
  />
  <h2
    className="new-stats-title"
  >
     from yesterday
  </h2>
</div>
`;

exports[`Render Components Case: Totals 1`] = `
<div
  className="totals"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <h2
    className="totals-title"
  />
  <h2
    className="totals-data"
  />
</div>
`;

exports[`Render Components Country: All News 1`] = `null`;

exports[`Render Components Country: General Info 1`] = `
<div
  className="new-stats"
>
  <h2
    className="title"
    style={
      Object {
        "color": "grey",
        "fontSize": "medium",
      }
    }
  />
  <h2
    className="data"
  />
</div>
`;

exports[`Render Components Country: News 1`] = `
<div
  className="news"
>
  <a
    className="title"
  />
  <h2
    className="source"
  >
    (
    )
  </h2>
</div>
`;

exports[`Render Pages About 1`] = `
<div
  className="App"
>
  <h1
    style={
      Object {
        "fontSize": "2em",
        "fontWeight": "800",
        "marginBottom": "20px",
        "marginTop": "20px",
      }
    }
  >
    About
  </h1>
  <div
    style={
      Object {
        "marginTop": "18px",
        "paddingBottom": "18px",
      }
    }
  >
    Our COVID-19 Database site allows users to gather quick statistics on the coronavirus in terms of country, cases, and potential risks. This website is intended for those susceptible to contracting the virus (that means you!), and our aim is to keep users informed about the coronavirus. Integrating disparate data sets allows us to form a broad overview of how countries have handled the COVID-19 pandemic, present some of the unique risks each country's population faces, and possibly indicate the near future trajectory of the pandemic.
  </div>
  <hr />
  <div
    style={
      Object {
        "margin": "18px",
      }
    }
  >
    <h4>
      Project Info
    </h4>
    <br />
    <div
      className="row"
    >
      <div
        className="col-sm-4"
      >
        <div
          className="list-group"
          onKeyDown={[Function]}
          role="tablist"
        >
          <a
            aria-selected={true}
            className="list-group-item list-group-item-action active"
            data-rb-event-key="#tools"
            disabled={false}
            href="#tools"
            onClick={[Function]}
            role="tab"
          >
            Tools
          </a>
          <a
            aria-selected={false}
            className="list-group-item list-group-item-action"
            data-rb-event-key="#data"
            disabled={false}
            href="#data"
            onClick={[Function]}
            role="tab"
            tabIndex={-1}
          >
            Data
          </a>
        </div>
      </div>
      <div
        className="col-sm-8"
      >
        <div
          className="tab-content"
        >
          <div
            aria-hidden={false}
            aria-labelledby={null}
            className="fade tab-pane active show"
            id={null}
            role="tabpanel"
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            <ul
              className="list-unstyled"
            >
              <li>
                <a
                  href="https://reactjs.org/"
                >
                  <img
                    height="100rem"
                    src="/icons/react.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  React
                </a>
                 
                - 
                For creating interactive UIs in JSX.
              </li>
              <li>
                <a
                  href="https://ant.design/"
                >
                  <img
                    height="100rem"
                    src="/icons/antd.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  Antd
                </a>
                 
                - 
                A React UI library for clean composable components.
              </li>
              <li>
                <a
                  href="https://nivo.rocks/"
                >
                  <img
                    height="100rem"
                    src="/icons/nivo.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  Nivo
                </a>
                 
                - 
                A React UI library for animated and interactive charts.
              </li>
              <li>
                <a
                  href="https://jestjs.io/"
                >
                  <img
                    height="100rem"
                    src="/icons/jest.jpg"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  Jest
                </a>
                 
                - 
                A JavaScript testing framework.
              </li>
              <li>
                <a
                  href="https://github.com/axios/axios"
                >
                  <img
                    height="100rem"
                    src="/icons/axios.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  Axios
                </a>
                 
                - 
                For doing browser-side HTTP requests to our API.
              </li>
              <li>
                <a
                  href="https://flask.palletsprojects.com/en/1.1.x/"
                >
                  <img
                    height="100rem"
                    src="/icons/flask.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  Flask
                </a>
                 
                - 
                For serving our API data in a RESTful way.
              </li>
              <li>
                <a
                  href="https://www.sqlalchemy.org/"
                >
                  <img
                    height="100rem"
                    src="/icons/sqla.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  SQLAlchemy
                </a>
                 
                - 
                A Python ORM for creating and interacting with our SQL models.
              </li>
              <li>
                <a
                  href="https://cloud.google.com"
                >
                  <img
                    height="100rem"
                    src="/icons/gcp.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  GCP
                </a>
                 
                - 
                For hosting our site on the cloud.
              </li>
              <li>
                <a
                  href="https://www.postman.com"
                >
                  <img
                    height="100rem"
                    src="/icons/postman.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  Postman
                </a>
                 
                - 
                For building and testing API's.
              </li>
              <li>
                <a
                  href="https://gitlab.com/explore"
                >
                  <img
                    height="100rem"
                    src="/icons/gitlab.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  GitLab
                </a>
                 
                - 
                DevOps tool for issue-tracking, continuous integration, testing, and deployment.
              </li>
              <li>
                <a
                  href="https://www.selenium.dev/"
                >
                  <img
                    height="100rem"
                    src="/icons/selenium.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  Selenium
                </a>
                 
                - 
                For end-to-end automated GUI testing.
              </li>
            </ul>
          </div>
          <div
            aria-hidden={true}
            aria-labelledby={null}
            className="fade tab-pane"
            id={null}
            role="tabpanel"
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            For the first phase, we downloaded a few local copies of the data provided from these sources and glued them into the instances using either a script or by copy-paste. The COVID-19 API, RestCountries, and NewsAPI all provided APIs to access their data, but the OWID dataset is only available in file format (
            <code>
              .json
            </code>
             in this case).
            <ul
              className="list-unstyled"
            >
              <li>
                <a
                  href="https://api.covid19api.com"
                >
                  <img
                    height="100rem"
                    src="/icons/server.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  COVID-19 API
                </a>
              </li>
              <li>
                <a
                  href="https://restcountries.eu"
                >
                  <img
                    height="100rem"
                    src="/icons/server.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  REST Countries
                </a>
              </li>
              <li>
                <a
                  href="https://newsapi.org"
                >
                  <img
                    height="100rem"
                    src="/icons/server.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  NewsAPI
                </a>
              </li>
              <li>
                <a
                  href="https://covid.ourworldindata.org/data/owid-covid-data.json"
                >
                  <img
                    height="100rem"
                    src="/icons/server.png"
                    style={
                      Object {
                        "marginRight": "10px",
                      }
                    }
                    width="100rem"
                  />
                  OWID COVID-19 Dataset
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr />
  <div
    style={
      Object {
        "marginTop": "18px",
        "paddingBottom": "18px",
      }
    }
  >
    <h4>
      GitLab Statistics
    </h4>
    <div
      className="spinner-border text-primary"
    />
    <br />
    <a
      href="https://gitlab.com/jrmoulckers/covid19db-net"
    >
      <img
        height="100rem"
        src="/icons/gitlab.png"
        width="100rem"
      />
    </a>
    <br />
    <a
      href="https://documenter.getpostman.com/view/12799044/TVKJxuP4"
    >
      <img
        height="100rem"
        src="/icons/postman.png"
        width="100rem"
      />
    </a>
  </div>
  <hr />
  <div>
    <div
      className="card"
      style={
        Object {
          "display": "inline-block",
          "margin": "10px",
          "width": "22rem",
        }
      }
    >
      <a
        href="https://www.linkedin.com/in/shrivushankar/"
      >
        <img
          className="card-img-top"
          src="/imgs/sshh12.jpg"
        />
      </a>
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
        >
          <a
            href="https://www.linkedin.com/in/shrivushankar/"
          >
            Shrivu Shankar
          </a>
        </div>
        <p
          className="card-text"
        >
          Junior Computer Science Major from Houston, TX
          <hr />
          <b>
            Role
          </b>
           
          Full Stack Developer
           
          <hr />
          <div
            className="spinner-border text-primary"
          />
        </p>
      </div>
    </div>
    <div
      className="card"
      style={
        Object {
          "display": "inline-block",
          "margin": "10px",
          "width": "22rem",
        }
      }
    >
      <a
        href="https://www.linkedin.com/in/cameron-doggett-186761164/"
      >
        <img
          className="card-img-top"
          src="/imgs/camd99.jpg"
        />
      </a>
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
        >
          <a
            href="https://www.linkedin.com/in/cameron-doggett-186761164/"
          >
            Cameron Doggett
          </a>
        </div>
        <p
          className="card-text"
        >
          Junior Computer Science Major from Katy, TX
          <hr />
          <b>
            Role
          </b>
           
          Back-end Developer
           
          <hr />
          <div
            className="spinner-border text-primary"
          />
        </p>
      </div>
    </div>
    <div
      className="card"
      style={
        Object {
          "display": "inline-block",
          "margin": "10px",
          "width": "22rem",
        }
      }
    >
      <a
        href="https://www.linkedin.com/in/yashkakodkar/"
      >
        <img
          className="card-img-top"
          src="/imgs/YashKakodkar.jpg"
        />
      </a>
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
        >
          <a
            href="https://www.linkedin.com/in/yashkakodkar/"
          >
            Yash Kakodkar
          </a>
        </div>
        <p
          className="card-text"
        >
          Junior Computer Science Major from Katy, TX
          <hr />
          <b>
            Role
          </b>
           
          Full Stack Developer
           
          <hr />
          <div
            className="spinner-border text-primary"
          />
        </p>
      </div>
    </div>
    <div
      className="card"
      style={
        Object {
          "display": "inline-block",
          "margin": "10px",
          "width": "22rem",
        }
      }
    >
      <a
        href="https://www.linkedin.com/in/jeffreymoulckers/"
      >
        <img
          className="card-img-top"
          src="/imgs/jrmoulckers.jpg"
        />
      </a>
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
        >
          <a
            href="https://www.linkedin.com/in/jeffreymoulckers/"
          >
            Jeffrey Moulckers
          </a>
        </div>
        <p
          className="card-text"
        >
          Junior Computer Science/Spanish Dual Major from Austin, TX
          <hr />
          <b>
            Role
          </b>
           
          Full Stack Developer
           
          <b>
            (Team Lead)
          </b>
          <hr />
          <div
            className="spinner-border text-primary"
          />
        </p>
      </div>
    </div>
    <div
      className="card"
      style={
        Object {
          "display": "inline-block",
          "margin": "10px",
          "width": "22rem",
        }
      }
    >
      <a
        href="https://www.linkedin.com/in/vassi-gianitsos-a3881b167/"
      >
        <img
          className="card-img-top"
          src="/imgs/vassi_gianitsos.jpg"
        />
      </a>
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
        >
          <a
            href="https://www.linkedin.com/in/vassi-gianitsos-a3881b167/"
          >
            Vassi Gianitsos
          </a>
        </div>
        <p
          className="card-text"
        >
          Senior Computer Science Major from Flower Mound, TX
          <hr />
          <b>
            Role
          </b>
           
          Front-end Developer
           
          <hr />
          <div
            className="spinner-border text-primary"
          />
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render Pages Cases 1`] = `
<div
  style={
    Object {
      "height": "50vh",
      "paddingTop": 250,
      "textAlign": "center",
      "width": "100vw",
    }
  }
>
  <div
    className="ant-spin ant-spin-lg ant-spin-spinning"
  >
    <span
      className="ant-spin-dot ant-spin-dot-spin"
    >
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
    </span>
  </div>
</div>
`;

exports[`Render Pages Country 1`] = `
<div
  style={
    Object {
      "height": "50vh",
      "paddingTop": 250,
      "textAlign": "center",
      "width": "100vw",
    }
  }
>
  <div
    className="ant-spin ant-spin-lg ant-spin-spinning"
  >
    <span
      className="ant-spin-dot ant-spin-dot-spin"
    >
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
    </span>
  </div>
</div>
`;

exports[`Render Pages Global News 1`] = `<div />`;

exports[`Render Pages Main 1`] = `
<div
  className="App"
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    className="ant-spin ant-spin-lg ant-spin-spinning"
  >
    <span
      className="ant-spin-dot ant-spin-dot-spin"
    >
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
    </span>
  </div>
</div>
`;

exports[`Render Pages Risk 1`] = `
<div
  style={
    Object {
      "height": "50vh",
      "paddingTop": 250,
      "textAlign": "center",
      "width": "100vw",
    }
  }
>
  <div
    className="ant-spin ant-spin-lg ant-spin-spinning"
  >
    <span
      className="ant-spin-dot ant-spin-dot-spin"
    >
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
      <i
        className="ant-spin-dot-item"
      />
    </span>
  </div>
</div>
`;
